// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db query Get FlightLog tests getAllFlightLogs between start and end date should match snapshot 1`] = `
{
  "aircraft_registration": "OH-P28",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 4,
  "arrival_airport": "EFHK",
  "billable_member_id": "Jukka1",
  "billing_remarks": "N/A",
  "block_mins": 155,
  "block_time": "02:35",
  "created_at": Any<Date>,
  "created_by": "Jukka1",
  "crew2_member_id": "Pekka1",
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "da40tndra",
  "flight_mins": 110,
  "flight_time": "01:50",
  "flight_type": "SAR",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "55.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 75,
  "invoice_number": "INV003",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2025-03-04T13:20:00.000Z,
  "night_flying_mins": 60,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 3,
  "off_block_time_utc": 2025-03-04T11:00:00.000Z,
  "oil_uplift_litres": "1.20",
  "on_block_time_utc": 2025-03-04T13:35:00.000Z,
  "personal_remarks": "Cargo delivery",
  "persons_on_board": 5,
  "pic_member_id": "Jukka1",
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-04T11:30:00.000Z,
  "total_time_in_service": "1.74",
  "updated_at": Any<Date>,
  "updated_by": "Jukka1",
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for end date should match snapshot 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 2,
  "arrival_airport": "EFTU",
  "billable_member_id": "Sanna1",
  "billing_remarks": "Night navigation exercise",
  "block_mins": 125,
  "block_time": "02:05",
  "created_at": Any<Date>,
  "created_by": "Sanna1",
  "crew2_member_id": "Juha1",
  "crew2_role": "FE",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "eject",
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "NAV",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "45.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 60,
  "invoice_number": "INV004",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2024-03-12T01:00:00.000Z,
  "night_flying_mins": 115,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": 2024-03-11T23:05:00.000Z,
  "oil_uplift_litres": "1.00",
  "on_block_time_utc": 2024-03-12T01:10:00.000Z,
  "personal_remarks": "Cross-day night flight",
  "persons_on_board": 2,
  "pic_member_id": "Sanna1",
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2024-03-11T23:15:00.000Z,
  "total_time_in_service": "1.92",
  "updated_at": Any<Date>,
  "updated_by": "Sanna1",
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for specific member id should match snapshot 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 1,
  "arrival_airport": "EFHK",
  "billable_member_id": "Matti1",
  "billing_remarks": "N/A",
  "block_mins": 135,
  "block_time": "02:15",
  "created_at": Any<Date>,
  "created_by": "Matti1",
  "crew2_member_id": "Jukka1",
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "mikify",
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "KOU",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "50.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 45,
  "invoice_number": "INV001",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2025-03-01T10:00:00.000Z,
  "night_flying_mins": 30,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": 2025-03-01T08:00:00.000Z,
  "oil_uplift_litres": "1.50",
  "on_block_time_utc": 2025-03-01T10:15:00.000Z,
  "personal_remarks": "Smooth flight",
  "persons_on_board": 4,
  "pic_member_id": "Liisa1",
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-01T08:15:00.000Z,
  "total_time_in_service": "2.00",
  "updated_at": Any<Date>,
  "updated_by": "Matti1",
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for start date should match snapshot 1`] = `
{
  "aircraft_registration": "OH-P28",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 4,
  "arrival_airport": "EFHK",
  "billable_member_id": "Jukka1",
  "billing_remarks": "N/A",
  "block_mins": 155,
  "block_time": "02:35",
  "created_at": Any<Date>,
  "created_by": "Jukka1",
  "crew2_member_id": "Pekka1",
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "da40tndra",
  "flight_mins": 110,
  "flight_time": "01:50",
  "flight_type": "SAR",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "55.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 75,
  "invoice_number": "INV003",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2025-03-04T13:20:00.000Z,
  "night_flying_mins": 60,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 3,
  "off_block_time_utc": 2025-03-04T11:00:00.000Z,
  "oil_uplift_litres": "1.20",
  "on_block_time_utc": 2025-03-04T13:35:00.000Z,
  "personal_remarks": "Cargo delivery",
  "persons_on_board": 5,
  "pic_member_id": "Jukka1",
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-04T11:30:00.000Z,
  "total_time_in_service": "1.74",
  "updated_at": Any<Date>,
  "updated_by": "Jukka1",
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs with Captain and copilot should return filtered logs 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 1,
  "arrival_airport": "EFHK",
  "billable_member_id": "Matti1",
  "billing_remarks": "N/A",
  "block_mins": 135,
  "block_time": "02:15",
  "created_at": Any<Date>,
  "created_by": "Matti1",
  "crew2_member_id": "Jukka1",
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "mikify",
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "KOU",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "50.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 45,
  "invoice_number": "INV001",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2025-03-01T10:00:00.000Z,
  "night_flying_mins": 30,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": 2025-03-01T08:00:00.000Z,
  "oil_uplift_litres": "1.50",
  "on_block_time_utc": 2025-03-01T10:15:00.000Z,
  "personal_remarks": "Smooth flight",
  "persons_on_board": 4,
  "pic_member_id": "Liisa1",
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-01T08:15:00.000Z,
  "total_time_in_service": "2.00",
  "updated_at": Any<Date>,
  "updated_by": "Matti1",
}
`;

exports[`Db query Get FlightLog tests getFlightLogTotals returns totals for all ac 1`] = `
[
  {
    "ac_total_flight_time": "250:55",
    "aircraft_registration": "OH-STL",
    "ajlb_seq_no": 3,
    "flight_log_mins_this_ajlb": 0,
    "flight_time_this_ajlb": "0:00",
    "total_flight_mins_at_ajlb_start": 15055,
    "total_flight_time_at_ajlb_start": "250:55",
  },
  {
    "ac_total_flight_time": "64:55",
    "aircraft_registration": "OH-IHQ",
    "ajlb_seq_no": 2,
    "flight_log_mins_this_ajlb": 120,
    "flight_time_this_ajlb": "2:00",
    "total_flight_mins_at_ajlb_start": 3775,
    "total_flight_time_at_ajlb_start": "62:55",
  },
  {
    "ac_total_flight_time": "102:27",
    "aircraft_registration": "OH-P28",
    "ajlb_seq_no": 4,
    "flight_log_mins_this_ajlb": 110,
    "flight_time_this_ajlb": "1:50",
    "total_flight_mins_at_ajlb_start": 6037,
    "total_flight_time_at_ajlb_start": "100:37",
  },
]
`;

exports[`Db query Get FlightLog tests getFlightLogTotals returns totals for all ac 2`] = `
[
  {
    "ac_total_flight_time": "250:55",
    "aircraft_registration": "OH-STL",
    "ajlb_seq_no": 3,
    "flight_log_mins_this_ajlb": 0,
    "flight_time_this_ajlb": "0:00",
    "total_flight_mins_at_ajlb_start": 15055,
    "total_flight_time_at_ajlb_start": "250:55",
  },
]
`;

exports[`Db query insert tests insertFlightLog inserts a new flight log to the db, querying using returned flight id returns the row, row can be deleted using flight id 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 1,
  "arrival_airport": "EFVA",
  "billable_member_id": "Matti1",
  "billing_remarks": "Test flight",
  "block_mins": 75,
  "block_time": "01:15",
  "created_at": Any<Date>,
  "created_by": "Matti1",
  "crew2_member_id": "Pekka1",
  "crew2_role": null,
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 60,
  "flight_time": "01:00",
  "flight_type": "KOU",
  "fuel_remaining_litres": "22.00",
  "fuel_uplift_litres": "100.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 0,
  "invoice_number": null,
  "is_billable_flight": false,
  "is_billed": false,
  "landing_time_utc": 2025-03-10T05:15:00.000Z,
  "night_flying_mins": 0,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": 2025-03-10T04:05:00.000Z,
  "oil_uplift_litres": "5.00",
  "on_block_time_utc": 2025-03-10T05:20:00.000Z,
  "personal_remarks": "No remarks",
  "persons_on_board": 4,
  "pic_member_id": "Liisa1",
  "pic_role": "FE",
  "priv_or_com_flight": "P",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-10T04:15:00.000Z,
  "total_time_in_service": "1023.50",
  "updated_at": Any<Date>,
  "updated_by": "Matti1",
}
`;
